Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-16721

Regression, [WIN32SS] Scrolling by pressing the scrollbar arrows does not draw the arrows as pressed

    XMLWordPrintable

Details

    Description

      Reproduction steps

      • Open readme.txt from desktop with our notepad
      • try to scroll the scrollbars by pressing the scroll arrows

      Expected result

      • I tested: When using our notepad.exe in Win XP and 2003SP2, the arrow-buttons will get into pressed state upon clicking

      Observed result
      0.4.13-RC-48-g818e5bc_buttonsNotPressed.webm
      Ros does not log anything when it misbehaves like that, therefore I ommitted the log.

      We can clearly deduce that the bug is not built into our notepad binary, but instead is deeper in ros. I would suspect a bug in win32ss/user/ntuser/scrollbar.c

      Others confirmed my observation, therefore "accepted".
      I wonder, whether it was always broken like that, or whether it regressed at some point?

      Attachments

        Issue Links

          Activity

            People

              reactosfanboy reactosfanboy
              reactosfanboy reactosfanboy
              Votes:
              2 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: